[gd_scene load_steps=3 format=3 uid="uid://d2ir63y4xfds8"]

[ext_resource type="Script" path="res://authentication.gd" id="1_b82fh"]
[ext_resource type="Script" path="res://v_box_container.gd" id="2_t7dha"]

[node name="Authentication" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b82fh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_right = 68.0
offset_bottom = 117.0
script = ExtResource("2_t7dha")

[node name="StateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Email_LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="Password_LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="Login_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Signup_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/Login_Button" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Signup_Button" to="." method="_on_signup_button_pressed"]
